[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Area2D.gd" type="Script" id=2]
[ext_resource path="res://Player/playerAsset 1.png" type="Texture" id=3]
[ext_resource path="res://Random/dragAsset 1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110, 90 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 116, 90 )
texture = ExtResource( 3 )

[node name="Info" type="Sprite" parent="Area2D/Sprite"]
position = Vector2( -176, 60 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 110, 90 )
shape = SubResource( 1 )
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_Area2D_mouse_exited"]
